# CleavAI

./: README.md  main.py  pyproject.toml
lab/: all_windows.csv  dataset.ipynb  furin_cleavage_windows.csv  lab.md  merops_database.ipynb  modeling.ipynb  negative_sampling.ipynb  negative_windows.csv  positive_sampling.ipynb  positive_windows.csv
