[project]
name = "cleavai"
version = "0.1.0"
description = "Deep learning–based pipeline for discovering protease-cleavable peptides."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mysql-connector-python>=9.4.0",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
