[project]
name = "cleavai"
version = "0.1.0"
description = "Deep learning–based pipeline for discovering protease-cleavable peptides."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.85",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.3",
    "mysql-connector-python>=9.4.0",
    "notebook>=7.4.4",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "torch>=2.7.1",
    "transformers>=4.54.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]
